Implement a swapchain utility.